--- a/Css/style.css
+++ b/Css/style.css
@@ -51,7 +51,7 @@ header{
     background-color: rgb(39, 15, 61);
 
 }
-.siderbar .image{
+.sidebar .image{
     width: 100px;
     height: 100px;
 }
